# _template_SharedLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  SharedLibConfig.cmake.in
cmake/: AddQtModule.cmake  RegPackage.cmake  RegPackageMacro.cmake
cmake_modules/: QtLinkMacro.cmake  RegPackageMacro.cmake  RegisterModule.cmake
source/: CMakeLists.txt  SharedLibConfig.cmake.in
source/MyLib/: CMakeLists.txt  MyClass.cpp
src/: CMakeLists.txt  SharedLibConfig.cmake.in  SharedLibConfig_buckup.cmake.in
src/MyLib/: MyClass.cpp  MyClass.h
