cmake_minimum_required( VERSION 3.8 )
cmake_policy(SET CMP0048 NEW)
project (SharedLib VERSION 0.3.0)

message(STATUS "")
message(STATUS "${CMAKE_PROJECT_NAME} [${PROJECT_VERSION}] config init...")

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
set(CMAKE_VS_INCLUDE_INSTALL_TO_DEFAULT_BUILD TRUE)
set(CMAKE_VS_INCLUDE_PACKAGE_TO_DEFAULT_BUILD TRUE)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

message(STATUS "\t CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
message(STATUS "\t CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX})
message(STATUS "\t CMAKE_GENERATOR : " ${CMAKE_GENERATOR})
message(STATUS "\t CMAKE_BUILD_TYPE : " ${CMAKE_BUILD_TYPE})
message(STATUS "\t CMAKE_CONFIGURATION_TYPES : " ${CMAKE_CONFIGURATION_TYPES})

add_subdirectory(source)

export ( PACKAGE ${CMAKE_PROJECT_NAME} ) 

message(STATUS "${CMAKE_PROJECT_NAME} config done...\n")


# CPACK SETUP ###################################################
# otevri PACKAGE.vcxproj - pMouse - Open dev cmd propmpt - "cpack"

if(WIN32)
	set(CPACK_GENERATOR WIX)
	set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
	set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
	set(CPACK_PACKAGE_DIRECTORY ${CMAKE_INSTALL_PREFIX})

	set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_PROJECT_NAME})
	set(CPACK_WIX_UPGRADE_GUID "12725C7F-BB8F-45BA-8616-DEA091488B9D")
	set(CPACK_WIX_CMAKE_PACKAGE_REGISTRY "SharedLib")
	
	include(CPack)
endif()

#[[
install(CODE 
	"execute_process (
		COMMAND cpack --config CPackConfig.cmake
	)"
)
#]]
